# cnb

./: .gitignore  .npmignore  .pre-commit-config.yaml  ADMIN_TO_DO.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  ROADMAP.md  SECURITY.md  VERSION  app.js  index.html  npm_recovery_codes.txt  package.json  pyproject.toml  schema.sql
.claude/: .gitignore  settings.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cnb_refactor_guideline/: cnb-architecture-docs.patch  cnb-codex-handoff.md
docs/: architecture-reconstruction.md  avatar-generation.md  capture-protocol.md  cnb-model.md  codex-engine.md  commands.md  contribution-wall.md  custom-domain.md  design-ownership-autonomy.md  device-chief-and-multidevice-supervisors.md  feishu-bridge.md  getting-started.md  index.md  knowledge-surfaces.md  mac-team-host-capacity.md  package-publishing.md  pricing.md
issues/: 001-feature-request-add-cs-history-slash-command.md  003-discussion-agent-driven-autonomous-conversation-mechanism.md  012-ack-inbox-ack.md  013-tmux-send-keys-shell.md  014-board-suspend-swarm-suspend.md  016-feature-encrypted-mailbox-for-async-developer-to-developer-m.md  022-all-registered-agents-please-run-keygen-to-enable-encrypted-.md  022-all-registered-agents-please-run-keygen-to-enable-encrypted.md  023-encrypted-mailbox-branch-is-live-pull-mailbox-to-send-receiv.md  024-rewrite-bin-swarm-from-bash-to-python.md  025-cnb-compose-team-configuration-file.md  026-architecture-debt-fragile-foundations-under-cross-machine-co.md  027-architecture-cleanup-plan-md-sync-removal-concerns-consolida.md  028-agent-status-visibility-push-based-heartbeat-instead-of-pull.md  029-design-agent-native-knowledge-sharing-system-replace-stackov.md  030-self-adaptive-team-auto-scaling-agent-ownership-protection.md  031-no-project-level-isolation-any-caller-can-access-any-project.md  032-add-persistent-mail-system-with-cc-and-threading.md  035-add-per-session-token-usage-tracking.md  046-task.md  (+115 more)
(+358 files in other folders)
