[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c-n-b"
version = "0.5.46.dev0"
description = "Multi-agent coordination framework for Claude Code sessions"
requires-python = ">=3.11"
license = "LicenseRef-OpenAll-1.0"
dependencies = [
    "cryptography>=41.0",
]

[project.scripts]
cnb = "lib.cli:main"

[tool.setuptools.packages.find]
include = ["lib*"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that may need external services",
    "security: marks security/isolation vulnerability tests (Issue #31)",
]

# ---------- ruff ----------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "E741",    # ambiguous variable name (short names like s/o are intentional)
    "B904",    # raise ... from err in except (too noisy for existing code)
    "SIM105",  # contextlib.suppress (try/except/pass is fine here)
    "SIM108",  # ternary operator (readability preference)
    "RUF001",  # ambiguous unicode (project uses Chinese strings)
    "RUF015",  # unnecessary iterable allocation (next(iter()) not always clearer)
]

[tool.ruff.lint.per-file-ignores]
"bin/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
